community/*: disable on armhf where depending on extra-cmake-modules

--- a/community/ark/APKBUILD
+++ b/community/ark/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ark
 pkgver=19.12.1
 pkgrel=0
 pkgdesc="Graphical file compression/decompression utility with support for multiple formats"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/utilities/org.kde.ark"
 license="GPL-2.0-only"
 depends="lrzip zstd p7zip zip unzip unrar"
