--- a/community/kaccounts-integration/APKBUILD
+++ b/community/kaccounts-integration/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kaccounts-integration
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/internet/"
 pkgdesc="Small system to administer web accounts for the sites and services across the KDE desktop"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later"
