--- a/community/kcolorchooser/APKBUILD
+++ b/community/kcolorchooser/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kcolorchooser
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/graphics/org.kde.kcolorchooser"
 pkgdesc="A color palette tool, used to mix colors and create custom color palettes"
 license="MIT"
