--- a/community/kdialog/APKBUILD
+++ b/community/kdialog/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kdialog
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/"
 pkgdesc="A utility for displaying dialog boxes from shell scripts"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
