--- a/community/kget/APKBUILD
+++ b/community/kget/APKBUILD
@@ -3,7 +3,9 @@
 pkgname=kget
 pkgver=19.12.1
 pkgrel=0
-arch="all !ppc64le !s390x" # Limited by plasma-workspace -> libksysguard -> qt5-qtwebengine
+# ppc64le and s390x blocked by plasma-workspace -> libksysguard -> qt5-qtwebengine
+# armhf blocked by extra-cmake-modules
+arch="all !ppc64le !s390x !armhf"
 url="https://kde.org/applications/internet/org.kde.kget"
 pkgdesc="A versatile and user-friendly download manager"
 license="GPL-2.0-or-later AND LGPL-2.0-only AND GFDL-2.1-only"
