--- a/community/kio-extras/APKBUILD
+++ b/community/kio-extras/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kio-extras
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/internet/"
 pkgdesc="Additional components to increase the functionality of KIO"
 license="GPL-2.0-or-later (LGPL-2.1-only OR LGPL-3.0-only)"
