--- a/community/kmousetool/APKBUILD
+++ b/community/kmousetool/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kmousetool
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/utilities/org.kde.kmousetool"
 pkgdesc="A program that clicks the mouse for you"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
