--- a/community/libkcddb/APKBUILD
+++ b/community/libkcddb/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=libkcddb
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/multimedia/"
 pkgdesc="KDE CDDB library"
 license="LGPL-2.0-or-later AND GPL-2.0-or-later"
