--- a/community/libksane/APKBUILD
+++ b/community/libksane/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=libksane
 pkgver=19.12.1
 pkgrel=0
-arch="all !armhf"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/graphics/"
 pkgdesc="An image scanning library"
 license="LGPL-2.1-only OR LGPL-3.0-only"
