--- a/community/nextcloud-client/APKBUILD
+++ b/community/nextcloud-client/APKBUILD
@@ -5,7 +5,9 @@ pkgver=2.6.2
 pkgrel=0
 pkgdesc="Nextcloud Desktop Client"
 url="https://github.com/nextcloud/desktop"
-arch="all !s390x !ppc64le" # qt5-qtwebengine
+# s390x and ppc64le blocked by qt5-qtwebengine
+# armhf blocked by extra-cmake-modules
+arch="all !s390x !ppc64le !armhf"
 license="GPL-2.0-only"
 makedepends="$depends_dev cmake doxygen qt5-qttools-dev qt5-qtkeychain-dev
 	graphviz extra-cmake-modules kio-dev qt5-qtwebengine-dev"
