--- a/community/phonon-backend-gstreamer/APKBUILD
+++ b/community/phonon-backend-gstreamer/APKBUILD
@@ -5,7 +5,7 @@ pkgver=4.10.0
 pkgrel=1
 pkgdesc="Phonon gstreamer backend for Qt5"
 url="https://phonon.kde.org/"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 license="LGPL-2.1-only OR LGPL-3.0-only"
 makedepends="extra-cmake-modules qt5-qtx11extras-dev gstreamer-dev gst-plugins-base-dev phonon-dev
 	libxml2-dev qt5-qttools-dev"
