--- a/community/spectacle/APKBUILD
+++ b/community/spectacle/APKBUILD
@@ -4,7 +4,7 @@ pkgname=spectacle
 pkgver=19.12.1
 pkgrel=0
 pkgdesc="Application for capturing desktop screenshots"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/utilities/org.kde.spectacle"
 license="GPL-2.0-only"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtx11extras-dev kcoreaddons-dev kwidgetsaddons-dev kdbusaddons-dev knotifications-dev kconfig-dev ki18n-dev kio-dev kwindowsystem-dev kdoctools-dev knewstuff-dev kdeclarative-dev libkipi-dev purpose-dev kwayland-dev xcb-util-image-dev xcb-util-cursor-dev libxcb-dev xcb-util-renderutil-dev"
