--- a/community/ffmpegthumbs/APKBUILD
+++ b/community/ffmpegthumbs/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=ffmpegthumbs
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/multimedia/"
 pkgdesc="FFmpeg-based thumbnail creator for video files"
 license="GPL-2.0-or-later"
