--- a/community/gwenview/APKBUILD
+++ b/community/gwenview/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=gwenview
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/graphics/org.kde.gwenview"
 pkgdesc="Fast and easy to use image viewer by KDE"
 license="GPL-2.0-only"
