--- a/community/juk/APKBUILD
+++ b/community/juk/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=juk
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://juk.kde.org/"
 pkgdesc="A jukebox, tagger and music collection manager"
 license="GPL-2.0-or-later"
