--- a/community/kate/APKBUILD
+++ b/community/kate/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kate
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/utilities/org.kde.kate"
 pkgdesc="A multi-document, multi-view text editor"
 license="LGPL-2.0-only AND LGPL-2.0-or-later"
