--- a/community/kcalc/APKBUILD
+++ b/community/kcalc/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kcalc
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/utilities/org.kde.kcalc"
 pkgdesc="Scientific Calculator"
 license="GPL-2.0-or-later"
