--- a/community/kmag/APKBUILD
+++ b/community/kmag/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kmag
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/utilities/org.kde.kmag"
 pkgdesc="A screen magnifier"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
