--- a/community/kolourpaint/APKBUILD
+++ b/community/kolourpaint/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kolourpaint
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="http://www.kolourpaint.org/"
 pkgdesc="An easy-to-use paint program"
 license="BSD-2-Clauase AND LGPL-2.0-or-later AND GFDL-1.2"
