--- a/community/kpeoplevcard/APKBUILD
+++ b/community/kpeoplevcard/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kpeoplevcard
 pkgver=0.1
 pkgrel=1
 pkgdesc="KPeople backend using vcard storage"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://phabricator.kde.org/source/kpeoplevcard"
 license="GPL-2.0-only OR GPL-3.0-only"
 depends="kirigami2"
