--- a/community/kruler/APKBUILD
+++ b/community/kruler/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kruler
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/graphics/org.kde.kruler"
 pkgdesc="An on-screen ruler for measuring pixels"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
