--- a/community/kwave/APKBUILD
+++ b/community/kwave/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kwave
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="http://kwave.sourceforge.net/"
 pkgdesc="A sound editor for KDE"
 license="GPL-2.0-or-later"
