--- a/community/libkcompactdisc/APKBUILD
+++ b/community/libkcompactdisc/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=libkcompactdisc
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/multimedia/"
 pkgdesc="Library for interfacing with CDs"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later"
