--- a/community/libkdcraw/APKBUILD
+++ b/community/libkdcraw/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=libkdcraw
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org"
 pkgdesc="RAW image file format support for KDE"
 license="GPL-2.0-or-later and LGPL-2.0-or-later"
