--- a/community/libkscreen/APKBUILD
+++ b/community/libkscreen/APKBUILD
@@ -4,7 +4,7 @@ pkgname=libkscreen
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="KDE screen management software"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-or-later AND GPL-2.0-or-later AND (GPL-2.0-only OR GPL-3.0-only)"
 depends_dev="qt5-qtbase-dev qt5-qtx11extras-dev kwayland-dev"
