--- a/community/libktorrent/APKBUILD
+++ b/community/libktorrent/APKBUILD
@@ -4,7 +4,7 @@ pkgname=libktorrent
 pkgver=2.1.1
 _ktorrentver=5.1.2 # $_ktorrentver=ktorrent-$pkgver
 pkgrel=1
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/applications/internet/org.kde.ktorrent"
 pkgdesc="A powerful BitTorrent client for KDE"
 license="GPL-2.0-or-later"
