testing/php7-pecl-uploadprogress: add readme

--- a/testing/php7-pecl-uploadprogress/APKBUILD
+++ b/testing/php7-pecl-uploadprogress/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=php7-pecl-uploadprogress
 _pkgreal=uploadprogress
 pkgver=1.1.3
-pkgrel=0
+pkgrel=1
 pkgdesc="An extension to track progress of a file upload for PHP"
 url="https://pecl.php.net/package/uploadprogress"
 arch="all"
@@ -31,16 +31,15 @@ check() {
 }
 
 package() {
-	local confdir="$pkgdir/etc/php7/conf.d"
-
 	make INSTALL_ROOT="$pkgdir" install
 
+	local confdir="$pkgdir/etc/php7/conf.d"
 	mkdir -p "$confdir"
 	echo "extension=$_pkgreal.so" > "$confdir"/$_pkgreal.ini
 
-	mkdir -p "$pkgdir"/usr/share/doc/$pkgname/examples/
-	cp -r examples/* \
-		"$pkgdir"/usr/share/doc/$pkgname/examples/
+	local docdir="$pkgdir"/usr/share/doc/$pkgname
+	install -Dm644 -t $docdir README.md
+	install -Dm644 -t $docdir/examples examples/*
 }
 
 sha512sums="7c5e58ab113d52da138d0518292f8bfb0597fd7ac5b43bef4954239020670a89fc616957d1ac43dae6660752ff0b396388aff26979b989b7768927fddefea7c0  php7-pecl-uploadprogress-1.1.3.tar.gz"
