community/wlroots: upgrade to 0.10.0

--- a/community/wlroots/APKBUILD
+++ b/community/wlroots/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Henrik Riomar <henrik.riomar@gmail.com>
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=wlroots
-pkgver=0.8.1
-pkgrel=1
+pkgver=0.10.0
+pkgrel=0
 pkgdesc="A modular Wayland compositor library"
 url="https://github.com/swaywm/wlroots"
 arch="all"
@@ -26,8 +26,7 @@ makedepends="
 	xkeyboard-config
 	"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/$pkgname/archive/$pkgver.tar.gz
-        meson-disabler-workaround.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/$pkgname/archive/$pkgver.tar.gz"
 
 build() {
 	meson \
@@ -35,6 +34,7 @@ build() {
 		--libdir /usr/lib \
 		-Dlogind=enabled \
 		-Dlogind-provider=elogind \
+		-Dexamples=false \
 		. build
 	ninja -C build
 }
@@ -43,5 +43,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="da41513de48e00303b31fde620463389103215011c6cc49b9a2420a1529889722aa54f26a211179c528709edb6b90ba2efdae5e4bcef18147d9516f3a94e365a  wlroots-0.8.1.tar.gz
-6163fb91ee1ab24acb3188f5abf866e4f55a3dac0a366dcd1050a0a72d1f4cad78df09b162a9128659cf00180c3174462de5150827f448be8b1d1becdd0894de  meson-disabler-workaround.patch"
+sha512sums="0e8e0c37f1afb1d99f0ecb3c2282992ffd06381aaa396c7234ead9f3ff2d5c599e766b677680ebaecf68e792054c3e42657d24f32d08bc8bcf35f9eb4bdaa876  wlroots-0.10.0.tar.gz"
