community/sway: upgrade to 1.4

--- a/community/sway/APKBUILD
+++ b/community/sway/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Henrik Riomar <henrik.riomar@gmail.com>
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=sway
-pkgver=1.2
-pkgrel=2
+pkgver=1.4
+pkgrel=0
 pkgdesc="i3 compatible window manager for Wayland"
 url="http://swaywm.org"
 arch="all"
@@ -61,7 +61,7 @@ fishcomp() {
 	install_if="$pkgname=$pkgver-r$pkgrel fish"
 
 	mkdir -p "$subpkgdir"/usr/share/fish
-	mv "$pkgdir"/usr/share/fish/completions "$subpkgdir"/usr/share/fish
+	mv "$pkgdir"/usr/share/fish/vendor_completions.d "$subpkgdir"/usr/share/fish
 }
 
 zshcomp() {
@@ -79,4 +79,4 @@ package() {
 	chmod u+s "$pkgdir"/usr/bin/sway
 }
 
-sha512sums="b43f625d35145a3377e64ea942f8b005946bb0925f08deace2da73ab504038b29331df9943296c97141e2283cd9b55e6cb3bca18c5c3999ecbd461325e36165b  sway-1.2.tar.gz"
+sha512sums="3b280bdfdbdae8fb9b4f555bc630c64e7c1d09f7b2c783b99413863a6b620d50cd2b6d10d63e11fdfb9c678fce9a403228ac52fa69fb52561ffbd06790505a71  sway-1.4.tar.gz"
