community/swaylock: upgrade to 1.5

--- a/community/swaylock/APKBUILD
+++ b/community/swaylock/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Henrik Riomar <henrik.riomar@gmail.com>
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swaylock
-pkgver=1.4
+pkgver=1.5
 pkgrel=0
 pkgdesc="Screen locker for Wayland"
 url="http://swaywm.org"
@@ -24,23 +24,20 @@ subpackages="
 	$pkgname-fish-completion:fishcomp:noarch
 	$pkgname-zsh-completion:zshcomp:noarch
 	"
-source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/$pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/swaylock/archive/$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
 	sed -i 's/login/base-auth/g' \
-		pam/swaylock.linux
+		pam/swaylock
 }
 
 build() {
-	cd "$builddir"
-	meson -Dswaylock-version="$pkgver" --prefix /usr build
+	meson --prefix /usr build
 	ninja -C build
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
@@ -59,7 +56,7 @@ fishcomp() {
 	install_if="$pkgname=$pkgver-r$pkgrel fish"
 
 	mkdir -p "$subpkgdir"/usr/share/fish
-	mv "$pkgdir"/usr/share/fish/completions "$subpkgdir"/usr/share/fish
+	mv "$pkgdir"/usr/share/fish/vendor_completions.d "$subpkgdir"/usr/share/fish/completions
 }
 
 zshcomp() {
@@ -70,4 +67,4 @@ zshcomp() {
 	mkdir -p "$subpkgdir"/usr/share/zsh
 	mv "$pkgdir"/usr/share/zsh/site-functions "$subpkgdir"/usr/share/zsh
 }
-sha512sums="5068b5f97e3094c511deda553f363a71f655b16e6533ef8f82befcd3b9027a55de81f143eb95e60cf4dbe4cecdc49906285bd6a0e6d51eb3b2807d0101581809  swaylock-1.4.tar.gz"
+sha512sums="16dd9b912ca702849290cf18d91ffbd64a70118cc284982a84b567c4974fd4590b12707c0aae1fcda7ccd1caa7880f342c633b9345bd795c36702916696d1f67  swaylock-1.5.tar.gz"
