community/sway: fix location of fish completion

--- a/community/sway/APKBUILD
+++ b/community/sway/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=sway
 pkgver=1.4
-pkgrel=0
+pkgrel=1
 pkgdesc="i3 compatible window manager for Wayland"
 url="http://swaywm.org"
 arch="all"
@@ -31,12 +31,10 @@ subpackages="
 	$pkgname-fish-completion:fishcomp:noarch
 	$pkgname-zsh-completion:zshcomp:noarch
 	"
-source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/$pkgname/archive/$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/sway/archive/$pkgver.tar.gz
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
@@ -61,7 +59,7 @@ fishcomp() {
 	install_if="$pkgname=$pkgver-r$pkgrel fish"
 
 	mkdir -p "$subpkgdir"/usr/share/fish
-	mv "$pkgdir"/usr/share/fish/vendor_completions.d "$subpkgdir"/usr/share/fish
+	mv "$pkgdir"/usr/share/fish/vendor_completions.d "$subpkgdir"/usr/share/fish/completions
 }
 
 zshcomp() {
@@ -74,7 +72,6 @@ zshcomp() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C output install
 	chmod u+s "$pkgdir"/usr/bin/sway
 }
