community/babl: upgrade to 0.1.72
Upstream now ships xz-compressed tarballs, the makefile was replaced by meson.

--- a/community/babl/APKBUILD
+++ b/community/babl/APKBUILD
@@ -1,31 +1,32 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=babl
-pkgver=0.1.66
+pkgver=0.1.72
 pkgrel=0
 pkgdesc="Dynamic, any to any, pixel format conversion library"
 url="http://gegl.org/babl"
 arch="all"
 license="LGPL-3.0-or-later"
+makedepends="meson gobject-introspection-dev lcms2-dev"
 subpackages="$pkgname-dev"
-source="https://ftp.gimp.org/pub/babl/${pkgver%.*}/$pkgname-$pkgver.tar.bz2"
+source="https://ftp.gimp.org/pub/babl/${pkgver%.*}/babl-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr
-	make
+	meson \
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--mandir=/usr/share/man \
+		--localstatedir=/var \
+		--buildtype=release \
+		. output
+	ninja -C output
 }
 
 check() {
-	cd "$builddir"
-	make check
+	ninja -C output test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="41534eea6cad21eae704af3fdce4857e9dc2b0efa48a7cfd7f98b23428198e95fc9ca2f30e522abf2fa06e907eaf4f7bbafc048b356cb5890fabcb9be21001b3  babl-0.1.66.tar.bz2"
+sha512sums="55425688467d565acecbe3657ed4191971fe70d0da0f69c348eec8a6db9807f3e27f5101cade2d886d017b5156e4ef56382df93f26cc335acb4ce33bbef23d6b  babl-0.1.72.tar.xz"
