main/dhcp: upgrade to 4.4.2

--- a/main/dhcp/APKBUILD
+++ b/main/dhcp/APKBUILD
@@ -1,19 +1,18 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=dhcp
-pkgver="4.4.1"
+pkgver=4.4.2
 _realver=${pkgver/_p/-P}
-pkgrel=7
+pkgrel=0
 pkgdesc="ISC Dynamic Host Configuration Protocol (DHCP)"
 url="https://www.isc.org/"
 arch="all"
 license="MPL-2.0"
-depends=""
-depends_server_ldap="!$pkgname-server-vanilla $pkgname"
-depends_server_vanilla="!$pkgname-server-ldap $pkgname"
+_depends_server_ldap="!$pkgname-server-vanilla $pkgname"
+_depends_server_vanilla="!$pkgname-server-ldap $pkgname"
 depends_static="$pkgname-dev"
 # busybox utils are not sufficient
-depends_dhclient="coreutils iproute2 run-parts"
-depends_dhcrelay=""  # do not inherit depends from $pkgname
+_depends_dhclient="coreutils iproute2 run-parts"
+_depends_dhcrelay=""  # do not inherit depends from $pkgname
 pkgusers="dhcp"
 pkggroups="dhcp"
 makedepends="krb5-dev linux-headers openldap-dev perl"
@@ -42,8 +41,7 @@ source="
 	dhcpd.initd
 	"
 
-builddir="$srcdir/$pkgname-$_realver"
-makedepends="$makedepends $depends_dhclient $depends_server_ldap $depends_server_vanilla"
+makedepends="$makedepends $_depends_dhclient $_depends_server_ldap $_depends_server_vanilla"
 
 # secfixes:
 #   4.4.1-r0:
@@ -81,7 +79,6 @@ _configure() {
 }
 
 build() {
-	cd "$builddir"
 	cp -a "$builddir" "$builddir-ldap"
 
 	_configure
@@ -96,7 +93,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 
 	cd "$builddir-ldap"
@@ -104,8 +100,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install
 
 	#install -m751 -D "$builddir"/client/scripts/linux "$pkgdir"/sbin/dhclient-script
@@ -126,7 +120,7 @@ openrc() {
 
 server_ldap() {
 	pkgdesc="ISC dhcpd server with LDAP support"
-	depends="$depends_server_ldap"
+	depends="$_depends_server_ldap"
 	provides="dhcp-server"
 	provider_priority=100
 
@@ -136,7 +130,7 @@ server_ldap() {
 
 server_vanilla() {
 	pkgdesc="ISC dhcpd server"
-	depends="$depends_server_vanilla"
+	depends="$_depends_server_vanilla"
 	install_if="$pkgname=$pkgver-r$pkgrel"
 	provides="dhcp-server"
 	provider_priority=200
@@ -148,7 +142,7 @@ server_vanilla() {
 
 dhclient() {
 	pkgdesc="ISC dhcp client"
-	depends="$depends_dhclient"
+	depends="$_depends_dhclient"
 
 	install -d -o dhcp -g dhcp "$subpkgdir"/var/lib/dhcp
 	install -d -o dhcp -g dhcp "$subpkgdir"/run/dhcp
@@ -163,7 +157,7 @@ dhclient() {
 
 dhcrelay() {
 	pkgdesc="ISC dhcp relay server"
-	depends="$depends_dhcrelay"
+	depends="$_depends_dhcrelay"
 	replaces="dhcp"
 
 	install -d "$subpkgdir"/run/dhcp \
@@ -177,13 +171,13 @@ static() {
 }
 
 
-gpg_signature_extensions="sha512.asc"
-gpgfingerprints="
-	good:AE3F AC79 6711 EC59 FC00  7AA4 74BB 6B9A 4CBB 3D38
-	BE0E 9748 B718 253A 28BB  89FF F1B1 1BF0 5CF0 2E57
-	"
+# gpg_signature_extensions="sha512.asc"
+# gpgfingerprints="
+# 	good:AE3F AC79 6711 EC59 FC00  7AA4 74BB 6B9A 4CBB 3D38
+# 	BE0E 9748 B718 253A 28BB  89FF F1B1 1BF0 5CF0 2E57
+# 	"
 
-sha512sums="684ae349f224918c9f8cec7bd6c55cd0b83ad2b5827375b2876ca088eb05b7ff1364e50f6dc24f2485c610d9be94d4ba3020f60a0fa0ef63962349d191b887e7  dhcp-4.4.1.tar.gz
+sha512sums="c3dee2cf6e4b43d519d4bc89e9b8b12a6e3747d8c4edc0f83d4a88355a483b91a5f7d2353a3c0a2f37f88704fd2f64478ac5161ca72b10c42cebcb92907afa40  dhcp-4.4.2.tar.gz
 17e2b9588ee5d1bd9acb9c2e30f7a28308d29c9e797c2be14c1feff52e6e231ce8a94535f18badff1342aff4ae4003aab986e0f0473f0cd280292fdab044b148  01-dhclient-script-fix-bare-ip.patch
 a70e4a7e80ee65c8ced6b61db80f7ccd0f35015b5cccf2e7c51705ae129230aa49ba9926bb88f7418018e7a112c2a40451f24b88e04464b590ff20091e8d8709  02-dhclient-script-remove-bashisms.patch
 d5697a56fbbff25199962608986e7ffb533ed4afd3e344e3c79d2010dda73cc0b088f06c454e9f0c69eb054e09a374455fa71d3f73306e0c98fa76df4dd321b7  dhcp-3.0-fix-perms.patch
