main/perl-path-tiny: upgrade to 0.112

--- a/main/perl-path-tiny/APKBUILD
+++ b/main/perl-path-tiny/APKBUILD
@@ -3,17 +3,16 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-path-tiny
 _pkgreal=Path-Tiny
-pkgver=0.110
+pkgver=0.112
 pkgrel=0
 pkgdesc="File path utility"
-url="http://search.cpan.org/dist/Path-Tiny/"
+url="https://metacpan.org/release/Path-Tiny"
 arch="noarch"
 license="Apache-2.0"
-cpanmakedepends="perl-test-mockrandom perl-test-failwarnings"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+depends="perl"
+makedepends="perl-dev perl-test-mockrandom perl-test-failwarnings"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/D/DA/DAGOLDEN/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/D/DA/DAGOLDEN/Path-Tiny-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
@@ -37,4 +36,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="ba7ddbc94268fe3d62be93b9ff8a3cae2347992ebdfa83987797290e86c8a2ce748a4f15dab05a6122c72b89af73790a62b9d64519055956775d92528b962f35  Path-Tiny-0.110.tar.gz"
+sha512sums="c387192fc42a78aee506fa332fd9fcd385fbc28fed02bc41b9c50e4cff6c65700ad3fd9d840871ef3bf7a8029719d8fd8b84f993ac816ff65c8d4e2203ad3b3f  Path-Tiny-0.112.tar.gz"
