community/perl-dancer: upgrade to 1.3513

--- a/community/perl-dancer/APKBUILD
+++ b/community/perl-dancer/APKBUILD
@@ -2,47 +2,41 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-dancer
 _pkgreal=Dancer
-pkgver=1.3512
-pkgrel=1
+pkgver=1.3513
+pkgrel=0
 pkgdesc="Perl module for Dancer"
-url="http://search.cpan.org/dist/Dancer/"
+url="https://metacpan.org/release/Dancer"
 arch="noarch"
-license="GPL PerlArtistic"
-cpandepends="perl-module-runtime perl-try-tiny perl-hash-merge-simple
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl perl-module-runtime perl-try-tiny perl-hash-merge-simple
 	perl-mime-types perl-http-server-simple-psgi perl-http-body
 	perl-devel-hide perl-plack perl-libwww perl-test-nowarnings
 	perl-data-dump"
-cpancheckdepends="perl-yaml perl-http-cookies perl-json perl-http-cookiejar 
+makedepends="perl-dev"
+checkdepends="perl-yaml perl-http-cookies perl-json perl-http-cookiejar
 	perl-test-pod-coverage perl-test-output"
-depends="$cpandepends"
-checkdepends="$cpancheckdepends"
-makedepends="perl-dev $cpanmakedepends"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/B/BI/BIGPRESH/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/B/BI/BIGPRESH/Dancer-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="e35ba7b6cbb2da4d61b054ac13483ea457011fad06a4a9abc596a2878d841f3eba0f5c08dfee0e5887fffba4b57c9b0862721959d1d1de57e2b53046093e8d3c  Dancer-1.3512.tar.gz"
+sha512sums="976fece6ab0ffff2303202d04c7c9da6e012c8bc0c719a81b8029b4965a9b682a5fe7a9adb3048e726e8b6f9442b8a52db6d8657749bac6bda90be4991971c85  Dancer-1.3513.tar.gz"
