--- a/main/perl-module-build/APKBUILD
+++ b/main/perl-module-build/APKBUILD
@@ -3,42 +3,36 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-module-build
 _pkgreal=Module-Build
-pkgver=0.4229
+pkgver=0.4231
 pkgrel=0
 pkgdesc="Build and install Perl modules"
-url="http://search.cpan.org/dist/Module-Build/"
+url="https://metacpan.org/release/Module-Build"
 arch="noarch"
-license="GPL PerlArtistic"
-cpandepends=""
-cpanmakedepends=""
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl"
+makedepends="perl-dev"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/L/LE/LEONT/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/L/LE/LEONT/Module-Build-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 check() {
-	cd "$builddir"
 	./Build test
 }
 
 prepare() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
-	perl Build.PL installdirs=vendor || return 1
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
+	perl Build.PL installdirs=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	./Build
 }
 
 package() {
-	cd "$builddir"
 	./Build install destdir="$pkgdir"
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="51e0d73cecf450062121c3223b1a4c6f8a8c260fc2345d1c1a5e13ddcbd2b7bc2578411ac254420e27720b9e00a8efc9a9daa3159e9cba5338a188734b35c738  Module-Build-0.4229.tar.gz"
+sha512sums="ee1dc18a7df3fe67e7f954d5e1e071aa0a6f5bce6783b768bceb01f071e64ac8be63f410c932c7c16764e5d4f52fc664ce11a12f26f6afc75a26f79883efad70  Module-Build-0.4231.tar.gz"
