tree-wide: pass arguments before subcommand to samurai
Samurai follows the POSIX Utility Syntax Guidelines and as such doesn't recognise
arguments after the subcommand

--- a/community/knot-resolver/APKBUILD
+++ b/community/knot-resolver/APKBUILD
@@ -69,7 +69,7 @@ check() {
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C build
+	DESTDIR="$pkgdir" ninja -C build install
 
 	cd "$pkgdir"
 
