--- a/testing/calls/APKBUILD
+++ b/testing/calls/APKBUILD
@@ -25,10 +25,10 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 sha512sums="129611bd6d7ba44c1d7fbc06df426fba50450d18fdd246d9d9156472a9976213ee51e8ea43715c44d20dc7ce462f95c905df433343c677b00602fd017bfde793  calls-v0.1.1.tar.gz"
