--- a/testing/chatty/APKBUILD
+++ b/testing/chatty/APKBUILD
@@ -25,10 +25,10 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 sha512sums="d69af6412e15147adfabf877fcb03ed38b28b08194ee33572f532690de23ca7d3d6fb3732ab52f4271544657e53c04f211a22185b54fcb1b03f2b197897ff2f8  chatty-0.1.4.tar.gz"
