--- a/testing/gnome-2048/APKBUILD
+++ b/testing/gnome-2048/APKBUILD
@@ -23,11 +23,11 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
 sha512sums="a085c77acef29241ddeab1c00f91dab3a6c51e3c1dc5baaafd25515a23dd5461e60b1423a96cb0830d844e96b1fd9ec81e9451cf8201329b59c31ad83b84fe27  gnome-2048-3.34.4.tar.xz"
