--- a/testing/gnome-chess/APKBUILD
+++ b/testing/gnome-chess/APKBUILD
@@ -23,11 +23,11 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
 sha512sums="dcd4c2cfb0ebb5d3481bb6f722ac847cb8976e31352286a245457a62291445f50ad86ce26a37c222112801dc807bb567ed4d71d2d6ccb1628c2cab0767445012  gnome-chess-3.34.0.tar.xz"
