--- a/testing/gnome-taquin/APKBUILD
+++ b/testing/gnome-taquin/APKBUILD
@@ -23,11 +23,11 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
 sha512sums="7e7713e1cd143ff69df8dd81b76aa754c51e0c296562a001e2a39dde25230a0e03b40dad9cbf2f52c37346cb6c1eb9f782d28d518d6833aab6fcffce1537de41  gnome-taquin-3.34.3.tar.xz"
