--- a/testing/libgnome-games-support/APKBUILD
+++ b/testing/libgnome-games-support/APKBUILD
@@ -24,11 +24,11 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
 sha512sums="2b2c77210103610cb91554f870d634bc8d06f0886eef5166bf9909c1975a87d960005640d48e3e917f74c7553e3ae07d473ba06c6c5d6582313c50a390ec6168  libgnome-games-support-1.4.4.tar.xz
