--- a/testing/lightsoff/APKBUILD
+++ b/testing/lightsoff/APKBUILD
@@ -23,11 +23,11 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
 sha512sums="dafdb121810f931dcc795decf6d94f3b9fb4c67b0ea2362451f1a73fe96ff8278682ac32dd3db4d0653d530e75ec4b37effa6ee55c916b72ea8d3de618ecf7a9  lightsoff-3.34.0.tar.xz"
