--- a/testing/phoc/APKBUILD
+++ b/testing/phoc/APKBUILD
@@ -23,10 +23,10 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir/" ninja install -C output
+	DESTDIR="$pkgdir/" ninja -C output install
 }
 sha512sums="fdd940d30ea818698689669f3dc1fc0103e8e1bb6d9740d777aa16119f0693357e100730df736aebabdd1c674b98fd41ebe61ccd8f339113c3f879d4868be05a  phoc-0.1.5.tar.gz"
