--- a/testing/phosh/APKBUILD
+++ b/testing/phosh/APKBUILD
@@ -31,11 +31,11 @@ build() {
 }
 
 check() {
-	ninja test -C output
+	ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir/" ninja install -C output
+	DESTDIR="$pkgdir/" ninja -C output install
 
 	install -D -m644 "$srcdir"/phosh.desktop \
 		"$pkgdir"/usr/share/wayland-sessions/phosh.desktop
