--- a/testing/squeekboard/APKBUILD
+++ b/testing/squeekboard/APKBUILD
@@ -25,10 +25,10 @@ build() {
 }
 
 check() {
-	xvfb-run ninja test -C output
+	xvfb-run ninja -C output test
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install -C output
+	DESTDIR="$pkgdir" ninja -C output install
 }
 sha512sums="d112b9828b899644576fd718c067aae608b60d7e882cdefea0523250ce0d0a38303b1f1e8e421220db7fd3b4e5285a9c37e56f596715dde2f71b4063b2f24f4b  squeekboard-v1.8.0.tar.gz"
