community/gst-plugins-good: re-enable on armhf by disabling Qt integration on it.

--- a/community/gst-plugins-good/APKBUILD
+++ b/community/gst-plugins-good/APKBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gst-plugins-good
 pkgver=1.16.2
-pkgrel=2
+pkgrel=3
 pkgdesc="GStreamer streaming media framework good plug-ins"
 url="https://gstreamer.freedesktop.org"
-arch="all !armhf" # armhf blocked by qt5-qtdeclarative
+arch="all"
 license="GPL-2.0-or-later LGPL-2.0-or-later"
 subpackages="$pkgname-lang $pkgname-qt $pkgname-gtk"
 replaces="gst-plugins-good1"
@@ -13,11 +13,15 @@ makedepends="cairo-dev flac-dev gdk-pixbuf-dev glib-dev gst-plugins-base-dev
 	libdv-dev libgudev-dev libice-dev libiec61883-dev libjpeg-turbo-dev
 	libogg-dev libpng-dev libshout-dev libsm-dev libsoup-dev libvpx-dev
 	libxdamage-dev libxext-dev libxv-dev linux-headers meson mpg123-dev
-	orc-compiler orc-dev qt5-qtdeclarative-dev qt5-qtx11extras-dev
-	taglib-dev v4l-utils-dev wavpack-dev zlib-dev"
+	orc-compiler orc-dev taglib-dev v4l-utils-dev wavpack-dev zlib-dev"
 ldpath="/usr/lib/gstreamer-1.0"
 source="https://gstreamer.freedesktop.org/src/gst-plugins-good/gst-plugins-good-$pkgver.tar.xz"
 options="!check" # elements/souphttpsrc fails
+
+case "$CARCH" in
+	armhf) ;;
+	*) makedepends="$makedepends qt5-qtdeclarative-dev qt5-qtx11extras-dev" ;;
+esac
 
 # secfixes:
 #   1.10.4-r0:
