testing/phoc: upgrade to 0.1.6_git20200126

--- a/testing/phoc/APKBUILD
+++ b/testing/phoc/APKBUILD
@@ -1,15 +1,19 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=phoc
-pkgver=0.1.5
+pkgver=0.1.6_git20200126
 pkgrel=0
 pkgdesc="wlroots based Phone compositor for the Phosh shell"
-arch="all"
+arch="all !s390x" # no wlroots
 url="https://source.puri.sm/Librem5/phoc"
 license="GPL-3.0-only"
 makedepends="meson ninja gobject-introspection-dev libinput-dev wayland-dev wayland-protocols libxkbcommon-dev wlroots-dev gnome-desktop-dev"
-source="$pkgname-$pkgver.tar.gz::https://source.puri.sm/Librem5/phoc/-/archive/v$pkgver/phoc-v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-v$pkgver"
+checkdepends="xvfb-run"
+options="!check" # Needs fullblown EGL
+source="https://source.puri.sm/Librem5/phoc/-/archive/b7e3b683385891558ece51091780a7c54c99ded4/phoc-b7e3b683385891558ece51091780a7c54c99ded4.tar.gz
+	120.patch"
+builddir="$srcdir/$pkgname-b7e3b683385891558ece51091780a7c54c99ded4"
+
 
 build() {
 	meson \
@@ -23,10 +27,11 @@ build() {
 }
 
 check() {
-	ninja -C output test
+	xvfb-run ninja -C output test
 }
 
 package() {
 	DESTDIR="$pkgdir/" ninja -C output install
 }
-sha512sums="fdd940d30ea818698689669f3dc1fc0103e8e1bb6d9740d777aa16119f0693357e100730df736aebabdd1c674b98fd41ebe61ccd8f339113c3f879d4868be05a  phoc-0.1.5.tar.gz"
+sha512sums="34693afe087def9e7b4ba62040a1fc6d92f423ad313d76321ec1fe2996d60a608af59bf714d51b21a2a9994dd9698124b55a94c32008313efdf5894d9da37c26  phoc-b7e3b683385891558ece51091780a7c54c99ded4.tar.gz
+175384e1bcb43cd9b97449827e9f88df9c290eaef118c6c18e73d9b94b620074e735e40781f31208a9dd18e7c4af82f310d6f67cb21abfd0919c24c4bd1a2280  120.patch"
