testing/yubikey-manager: upgrade to 3.1.1

--- a/testing/yubikey-manager/APKBUILD
+++ b/testing/yubikey-manager/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Daniel Everett <deverett@gmail.com>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=yubikey-manager
-pkgver=3.1.0
-pkgrel=1
+pkgver=3.1.1
+pkgrel=0
 pkgdesc="Python library and command line tool for configuring any YubiKey over all USB interfaces"
 url="https://developers.yubico.com/yubikey-manager/"
 arch="noarch"
 license="BSD-2-Clause"
 depends="python3 py3-ykman py3-click py3-usb py3-pyscard py3-openssl py3-fido2
 	py3-cryptography py3-setuptools libusb ykpers-dev yubico-c pcsc-lite
-	pcsc-lite-libs"
+	pcsc-lite-libs libu2f-host"
 subpackages="py3-ykman"
 source="https://developers.yubico.com/yubikey-manager/Releases/yubikey-manager-$pkgver.tar.gz"
 
@@ -30,4 +30,4 @@ ykman() {
 	mv "$pkgdir"/usr/lib "$subpkgdir"/usr/lib
 }
 
-sha512sums="518eedb52cfcf725c13114c433f848b97f711e94fa9c71685916fb8cb20e5bfc431f648b0ec710ef9ebed2bc8ddd8722ca1c9865d7a1b29537b719e167ed5f60  yubikey-manager-3.1.0.tar.gz"
+sha512sums="8229d5442ddf89fe90abb0153aa005cb0d149a84634b994dc283f7cbac2f72d4b913c238c277c6aa07f431aed8905008aeb11e594e730be71c9ca88150a6ef68  yubikey-manager-3.1.1.tar.gz"
