--- a/testing/yubikey-manager-qt/APKBUILD
+++ b/testing/yubikey-manager-qt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=yubikey-manager-qt
-pkgver=1.1.3
+pkgver=1.1.4
 pkgrel=0
 pkgdesc="Cross-platform application for configuring any YubiKey over all USB transports"
 url="https://developers.yubico.com/yubikey-manager-qt/"
@@ -11,9 +11,9 @@ depends="py3-ykman python3 py3-pyotherside qt5-qtquickcontrols
 	qt5-qtgraphicaleffects"
 makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtquickcontrols2-dev"
 options="!check" # No test suite present
-source="https://developers.yubico.com/yubikey-manager-qt/Releases/yubikey-manager-qt-$pkgver.tar.gz
+source="https://github.com/Yubico/yubikey-manager-qt/archive/yubikey-manager-qt-$pkgver.tar.gz
 	use-py3.patch"
-builddir="$srcdir/$pkgname"
+builddir="$srcdir/$pkgname-$pkgname-$pkgver"
 
 build() {
 	qmake-qt5
@@ -27,5 +27,5 @@ package() {
 }
 
 
-sha512sums="84bcca3f74967ba8aa470b8dd6c8699ff6a93a85ce942934a1d0cd674a4c507ba297d9a5ebb40bae3476ea713965a7bb3816dad1110a045c338f070eb249f02b  yubikey-manager-qt-1.1.3.tar.gz
+sha512sums="a13415a602e512d088d4a54aa10aa7e1770280b87cfc0fa12a90501dd0ed8265e400405d9f9d018398964f33abab640800bf3d0d6f88625dac9e416bf1a93ea4  yubikey-manager-qt-1.1.4.tar.gz
 d3c0c11032ac7dbfc8d48f08766d3d98061f7382008f7ee257ac2fe4150fc20b14c0003b59b9a642259365b105700d52b6b2ebf4343fb5dfa72125a36a9fe6fb  use-py3.patch"
