testing/celery: add missing dependency on py3-tz
fixes #11169

--- a/testing/celery/APKBUILD
+++ b/testing/celery/APKBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=celery
 pkgver=4.3.0
-pkgrel=3
+pkgrel=4
 pkgdesc="An asynchronous task queue/job queue based on distributed message passing"
 url="http://www.celeryproject.org/"
 arch="noarch !s390x" # lmited by py3-kombu
 license="Apache-2.0"
-depends="py3-urllib3 py3-redis py3-vine py3-kombu py3-billiard"
+depends="py3-urllib3 py3-redis py3-vine py3-kombu py3-billiard py3-tz"
 makedepends="python3-dev py3-setuptools"
 install="$pkgname.pre-install"
 source="https://files.pythonhosted.org/packages/source/${pkgname:0:1}/$pkgname/$pkgname-$pkgver.tar.gz
