abuild.in: in snapshot(), fix recursive calls
- Call "$abuild_path" instead of plain "abuild"
- Pass $forceroot as done elsewhere

--- a/abuild.in
+++ b/abuild.in
@@ -2492,7 +2492,7 @@ snapshot() {
 	local _date=$(date +%Y%m%d)
 	local _format="tar.gz"
 	# remove any repositories left in srcdir
-	abuild clean
+	"$abuild_path" $forceroot clean
 	mkdir -p "$srcdir" && cd "$srcdir"
 	# clone git repo and archive
 	if [ -n "$giturl" ]; then
@@ -2529,7 +2529,7 @@ snapshot() {
 		# set the pkgver to current date and update checksum
 		sed -i -e "s/^pkgver=.*/pkgver=${_version}/" \
 			APKBUILD || return 1
-		abuild checksum
+		"$abuild_path" $forceroot checksum
 	fi
 }
 
