community/kea: fix problem with kea service doesn't want to stop
It often happens to me that kea process got stuck when stopping the
service. This patch changes the behaviour of the start-stop-daemon
to send SIGINT to the process if it doesn't die within 5 seconds
and if it's still running after 1 second, then SIGKILL.

--- a/community/kea/kea.initd.in
+++ b/community/kea/kea.initd.in
@@ -3,6 +3,7 @@
 : ${cfgfile:="/etc/kea/@@NAME@@.conf"}
 : ${logger_dest:="syslog"}
 : ${command_user:="kea"}
+: ${retry:="SIGTERM/5/SIGINT/1/SIGKILL/1"}
 : ${wait:=300}
 
 name="@@NAME@@"
