--- a/community/ktp-common-internals/APKBUILD
+++ b/community/ktp-common-internals/APKBUILD
@@ -5,7 +5,7 @@ pkgver=19.12.1
 pkgrel=0
 pkgdesc="Library for KTp"
 url="https://github.com/kde/ktp-common-internals"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 license="LGPL-2.1-only AND GPL-2.0-only"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev kcoreaddons-dev knotifications-dev kio-dev kwidgetsaddons-dev kcmutils-dev knotifyconfig-dev ktexteditor-dev kwallet-dev kconfig-dev kwindowsystem-dev kemoticons-dev kiconthemes-dev kpeople-dev telepathy-qt-dev"
 makedepends="$depends_dev extra-cmake-modules doxygen"
@@ -26,11 +26,6 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
 	make
-}
-
-check() {
-	cd "$builddir"/build
-	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
