testing/sbcl: Upgrade to 2.0.1
Build with Eric Timmon's musl patches, build on armv7 & x86_64. aarch64 port in progress.

--- a/testing/sbcl/APKBUILD
+++ b/testing/sbcl/APKBUILD
@@ -1,36 +1,57 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
+# Contributor: Eric Timmons <etimmons@alum.mit.edu>
 # Contributor: Will Sinatra <wpsinatra@gmail.com>
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=sbcl
-pkgver=1.5.8
+pkgver=2.0.1
 pkgrel=0
 pkgdesc="Steel Bank Common Lisp"
 url="http://www.sbcl.org/"
-arch="x86_64"
+arch="x86_64 armv7" #aarch64 is WIP
 license="custom"
+options="!check"
 checkdepends="ed"
-makedepends="clisp linux-headers paxmark zlib-dev"
+makedepends="ecl ecl-dev gmp-dev gc gc-dev libffi-dev linux-headers paxmark zlib-dev"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.bz2::https://prdownloads.sourceforge.net/sbcl/sbcl-$pkgver-source.tar.bz2
-	pax-genesis-stage-two.patch
-	musl-fixes.patch
-	musl-fix-threads.patch
-	sbcl_prefix.patch
-	"
+	0001-Fix-sb-bsd-sockets-on-musl-libc.patch
+	0002-Fix-threads-on-musl-libc.patch
+	0003-Fix-foreign-tests-on-musl-libc.patch
+	0004-Only-include-old-memcpy-version-on-glibc.patch
+	Disable-fcntl.1-POSIX-test.patch
+	Fix-ARM-build-using-ECL-host.patch
+	march-armv5-removed.patch"
 
-build() {
-	GNUMAKE=make ./make.sh clisp \
-		--prefix=/usr \
-		--with-sb-thread \
-		--with-sb-test \
-		--with-sb-unicode \
-		--with-sb-core-compression
+prepare() {
+	#TODO: handle this properly
+
+	#Patches to build on musl libc, required universally, pending upstream
+	patch -p1 -i "$srcdir"/0001-Fix-sb-bsd-sockets-on-musl-libc.patch
+	patch -p1 -i "$srcdir"/0002-Fix-threads-on-musl-libc.patch
+	patch -p1 -i "$srcdir"/0003-Fix-foreign-tests-on-musl-libc.patch
+	patch -p1 -i "$srcdir"/0004-Only-include-old-memcpy-version-on-glibc.patch
+
+	#Arch specific patches required by platform
+	case "$CARCH" in
+		armv7)
+			patch -p1 -i "$srcdir"/Disable-fcntl.1-POSIX-test.patch
+			patch -p1 -i "$srcdir"/Fix-ARM-build-using-ECL-host.patch
+			patch -p1 -i "$srcdir"/march-armv5-removed.patch ;;
+		aarch64)
+			patch -p1 -i "$srcdir"/Fix-ARM-build-using-ECL-host.patch ;;
+	esac
 }
 
-check() {
-	cd "$builddir"/tests
+build() {
+	all_arch_conf='--prefix=/usr --with-sb-test --with-sb-unicode --with-sb-core-compression'
 
-	sh run-tests.sh
+	case "$CARCH" in
+		armv7) conf="$all_arch_conf" ;;
+		aarch64) conf="--prefix=/usr" ;;
+		*) conf="$all_arch_conf --with-sb-thread" ;;
+	esac
+
+	GNUMAKE=make ./make.sh ecl "$conf"
 }
 
 package() {
@@ -48,8 +69,11 @@ package() {
 		"$pkgdir"/usr/share/info 2>/dev/null || true
 }
 
-sha512sums="20966035e878a1f6aa9b0acf20eb88087d5cd604d65ae90f43bbfa3d2d40afa46864daabf45d8c6ecbbd429e876279c891d6e3d9344f2972f611a4f9b2eec8f4  sbcl-1.5.8.tar.bz2
-cda5c7268b314145a1bdb8293c7970e077aebf3cce5dace12542bf18beb7b124bf97f4754906f2f681428869ca3060300b88cab80055a3d5881dfcdcfbe51d6d  pax-genesis-stage-two.patch
-507ecaf8fc296586c637d6ad8c91770efe18158a3aa551d0d2993ce9592454f33442d425d076bcb7121525d7942a03d9a0038252251f1540c575e95fb334ef7e  musl-fixes.patch
-86b8a51d518d71a3c4d3069f80bc00cccd4b97edc6c96ff12875a0727cc2b96208f35c3a11044d98881b5e6c2e607fc65506020b7ff990b257edae55eb6a1c59  musl-fix-threads.patch
-bfb6bef3b6512e487e45bc8c9cf36aa519e470690b6c7036bba7d28269bd899c60a4dfa09b5aba44830b8c002e7191276f2cf6f8f134b163d05af7b46f9849ff  sbcl_prefix.patch"
+sha512sums="1d92589033e123c21377f820dbc22e27f2610a372c5545799bec7c247795ba4b8b65102c7fe739f4a15a84579ec72f63fb9f4b197db5c6da1f8d59bd35966bea  sbcl-2.0.1.tar.bz2
+76ccb2206f0a9abd3f74859c9db3d8622e7006a62f867f6cf2398ce16256800a880111f5ea3911a315f6f82eb4b2b77dbeeb73f609ec065421b11978fd6fe18f  0001-Fix-sb-bsd-sockets-on-musl-libc.patch
+4caa863e5e44170b4ca8f9a3199886303e02821edbc0c7866ac1013681cfaeb76153856a28bff632f2f396d39ee05ac0e427393716209db8e3f0bc640f4816ec  0002-Fix-threads-on-musl-libc.patch
+7686f3110c1b6920790257d6b938b701afb4ea1710e0057c74f19f107affa0cfaaf2519215df9f9d5b6f326ee9feb1d935ffb8152390560f22e3188db9759065  0003-Fix-foreign-tests-on-musl-libc.patch
+02452684bccc200c0117252019679b0cf0403a90e5fb97f0981cb658888e73e7792efc47ae82f01cdaec128b1b3e356b0878fdb07cf04d7c5fdd0b2afd97186f  0004-Only-include-old-memcpy-version-on-glibc.patch
+cffecafd3f902d5f2be05fde3c0c5d0e0b0b8bb57d9561296ea9e630490c9a02c79ec616ca9c41de8d8be204e9e019df14e5d621adaa3dc444853f2cb5a6101c  Disable-fcntl.1-POSIX-test.patch
+6f49d1f1c6bd4e8d839e6b4ab3bb74cbdcce85ee83a0f1c5efab04d97b613a624f8874dadd7f6d981940ff28c468f00b74a56ff2afc53f41884d753ac7a5028f  Fix-ARM-build-using-ECL-host.patch
+367454a75de122134fdbf1064182a96ee00cf0685db0922134fdbdfc0e0bb2c6a5cfb9878f23409eca48a443e0f19b291f8d380e3475176a4c8cea0c9768c2bd  march-armv5-removed.patch"
