--- a/testing/volatility3/APKBUILD
+++ b/testing/volatility3/APKBUILD
@@ -6,7 +6,7 @@ _pkgver=${pkgver/_beta1/-beta.1}
 pkgrel=1
 pkgdesc="Volatile memory forensics toolkit"
 url="https://github.com/volatilityfoundation/volatility3"
-arch="noarch"
+arch="noarch !armhf !armv7" # py3-yara
 license="GPL-2.0"
 depends="py3-crypto py3-capstone py3-yara"
 makedepends="py3-setuptools"
