community/libetonyek: rebuild against mdds 1.5

--- a/community/libetonyek/APKBUILD
+++ b/community/libetonyek/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=libetonyek
 pkgver=0.1.9
-pkgrel=2
+pkgrel=3
 pkgdesc="Import filter and tools for Apple Keynote presentations"
 url="https://wiki.documentfoundation.org/DLP/Libraries/libetonyek"
 arch="all"
@@ -10,12 +10,9 @@ license="MPL-2.0"
 depends_dev="glm-dev boost-dev librevenge-dev libxml2-dev zlib-dev liblangtag-dev"
 makedepends="$depends_dev gperf doxygen mdds-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-tools"
-source="https://dev-www.libreoffice.org/src/$pkgname/$pkgname-$pkgver.tar.xz"
-
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://dev-www.libreoffice.org/src/libetonyek/$pkgname-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -25,18 +22,16 @@ build() {
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
 		--disable-werror \
-		--with-mdds=1.4 \
+		--with-mdds=1.5 \
 		--disable-static
 	make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
