community/libixion: upgrade to 0.15.0

--- a/community/libixion/APKBUILD
+++ b/community/libixion/APKBUILD
@@ -1,22 +1,19 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=libixion
-pkgver=0.14.1
-pkgrel=3
-pkgdesc="a general purpose formula parser & interpreter"
+pkgver=0.15.0
+pkgrel=0
+pkgdesc="A general purpose formula parser & interpreter"
 url="https://gitlab.com/ixion/ixion"
 arch="all"
 license="MPL-2.0"
-depends=""
-depends_dev=""
-makedepends="$depends_dev boost-dev mdds-dev"
-install=""
+makedepends="$depends_dev boost-dev mdds-dev spdlog-dev"
 subpackages="$pkgname-dev"
-source="https://kohei.us/files/ixion/src/libixion-$pkgver.tar.xz"
-builddir="$srcdir/libixion-$pkgver"
+source="https://kohei.us/files/ixion/src/libixion-$pkgver.tar.xz
+	fix-nullptr_t.patch
+	"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,15 +26,14 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
 dev() {
 	default_dev
-	cd "$builddir"
 	mkdir -p "$subpkgdir"/usr
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr
 }
 
-sha512sums="e4ae6348833d2178c1dc76916937bcc9d7821dc6570fe13093c441ca22e0301a1ca6a4cf85d9814b83534733dba98f4c4a372791f93bc57173317657675b9ae3  libixion-0.14.1.tar.xz"
+sha512sums="feecaa4a8e6191649a7ecbc6c0f4d7db6dba3a5e4a031c1f55236907bf94e2ece9ee05d18ed345e3503cffb4a380b04f6c4941ef4214ddf92687998a070b7543  libixion-0.15.0.tar.xz
+bd8c1a3159e57f315e10d44e0e2f1a28f7022485ced3603fdd0ff223cac8cfb2bb135e6e6c0d5ec5a99595c27a8c1c3948ad92d2f383dd90c6922964afd1136d  fix-nullptr_t.patch"
